# Dogu

./: .gitignore  README.md
.github/workflows/: ci.yml
app/: .gitignore  .vercelignore  LOOP_LEDGER.md  README.md  TDD_LOOP.md  dart_test.yaml  pubspec.yaml
app/android/app/: build.gradle.kts
app/assets/: seed.json
app/ios/Runner/: Info.plist
app/ios/Runner.xcodeproj/: project.pbxproj
app/lib/: main.dart
app/lib/src/: blocks.dart  bundled_seed.g.dart  core.dart  data_state.dart  home_widgets.dart  misc_widgets.dart  pages.dart  url_strategy_stub.dart  url_strategy_web.dart  v2_detail.dart  v2_home.dart  v2_shell.dart  v2_theme.dart
app/linux/: CMakeLists.txt
app/scripts/: run_local.sh
app/test/: v1_header_golden_test.dart  v2_functional_test.dart  v2_home_golden_test.dart  version_switch_test.dart  widget_test.dart
app/web/: index.html  manifest.json
app/windows/: CMakeLists.txt
backend/: .env.local.example  .vercelignore  README.md  pyproject.toml  vercel.json
backend/api/: index.py
backend/app/: __init__.py  config.py  database.py  main.py  models.py  repository.py  security.py  seed.py  state.py
backend/app/data/: seed.json  slim.db  test_fixture.db
backend/app/routers/: __init__.py  admin.py  catalog.py  health.py  home.py  newsletter.py  orders.py  proxy.py  search.py
backend/datacrawler/: categories.json  categories.txt  crawler.py  db.py  main.py
backend/scripts/: make_slim_db.py  make_test_fixture.py  run_local.sh
backend/tests/: conftest.py  test_api.py  test_ssot.py
docs/: DESIGN_REVIEW_V2.md
scripts/: sync_seed.py
(+8 files in other folders)
